--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -25,7 +25,7 @@ author_profile: true
   <hr />
   {% for pub in publications_sorted %}
     {% if pub.year == year %}
-      {% include archive-single.html %}
+      {% include archive-single.html post=pub %}
     {% endif %}
   {% endfor %}
 {% endfor %}
