--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -25,6 +25,7 @@ author_profile: true
   <hr />
   {% for pub in publications_sorted %}
     {% if pub.year == year %}
+      {{ pub.year }} — {{ pub.title }}<br />
       {% include archive-single.html post=pub %}
     {% endif %}
   {% endfor %}
